--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,10 @@
-anyio==3.6.2
-appdirs==1.4.4
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-
-attrbox==0.1.5
-attrs==22.2.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==6.0.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
-comm==0.1.2
-cryptography==39.0.0
-debugpy==1.6.5
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-docopt==0.6.2
-entrypoints==0.4
-executing==1.2.0
-fastjsonschema==2.16.2
-fqdn==1.5.1
-frozendict==2.3.4
-h11==0.14.0
-html5lib==1.1
-httpcore==0.16.3
-httpx==0.23.3
-idna==3.4
-ipykernel==6.20.2
-ipython==8.8.0
-ipython-genutils==0.2.0
-isoduration==20.11.0
-jedi==0.18.2
+blinker==1.6.2
+click==8.1.7
+colorama==0.4.6
+Flask==2.3.3
+gunicorn==21.2.0
+itsdangerous==2.1.2
 Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==7.4.9
-jupyter_core==5.1.3
-jupyter_server==2.1.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mistune==2.0.4
-multitasking==0.0.11
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.24.2
-packaging==23.0
-pandas==1.5.3
-pandas-datareader==0.10.0
-pandocfilters==1.5.0
-parso==0.8.3
-pdfmerge==1.0.0
-pdfminer.six==20221105
-pdfplumber==0.10.2
-pexpect==4.8.0
-pickleshare==0.7.5
-pikepdf==8.4.0
-Pillow==10.0.0
-platformdirs==2.6.2
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.14.0
-pypdf==3.9.0
-PyPDF2==3.0.1
-pypdfium2==4.19.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.4
-python-telegram-bot==20.2
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.0.0
-radian==0.6.4
-rchitect==0.3.40
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-Send2Trash==1.8.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-terminado==0.17.1
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.2
-tqdm==4.66.1
-traitlets==5.8.1
-uri-template==1.2.0
-urllib3==1.26.14
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.0
-yfinance==0.2.9
+MarkupSafe==2.1.3
+packaging==23.1
+Werkzeug==2.3.7
